Creato ramo list3

--- a/PrezziWebService-list100.properties
+++ b/PrezziWebService-list100.properties
@@ -1,6 +1,7 @@
 #Application Config
-application.listino: 100
+application.listino: 3
 
 info.assistenza.nome = "Simone Paolini"
 info.nome.nome-app = "Prezzi Web Service - JWT Auth"
 info.profilo-attivo = GitHub
+info.label = list3
